# qt-ui-lint

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CMakeLists.txt  README.md
src/: CMakeLists.txt  Checker.cpp  Checker.h  Finding.cpp  Finding.h  Fixer.cpp  Fixer.h  NoOp.cpp  NoOp.h  Tool.cpp  Tool.h  ToolFactory.cpp  ToolFactory.h  Toolchain.cpp  Toolchain.h  main.cpp
tests/: CMakeLists.txt  ToolFactoryTest.cpp  ToolchainTest.cpp
tests/cmake/: qt-ui-lint-tests.cmake
tests/testdata/qttools-6.2.4/: calculatorform.ui
